--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@nuxt/content": "^2.13.4",
     "@nuxtjs/robots": "^5.2.6",
     "@nuxtjs/sitemap": "^7.2.7",
-    "@vueuse/core": "^10.9.0",
-    "daisyui": "3.9.4",
+    "@vueuse/core": "^12.8.2",
+    "daisyui": "^4.12.24",
     "dayjs": "^1.11.13",
-    "nuxt": "3.15.4",
+    "nuxt": "^3.16.0",
     "nuxt-security": "^2.0.0-rc.9",
-    "vue": "3.4.21",
-    "vue-router": "4.3.0"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.5.0",
-    "@nuxtjs/tailwindcss": "^6.11.4",
-    "@tailwindcss/typography": "0.5.10",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@tailwindcss/typography": "0.5.16",
     "eslint": "^8.57.0"
   }
 }
